--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="10dp">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/lyj_result"
+        android:id="@+id/lyjResult"
         android:text="0"
         android:textSize="40dp"
         android:layout_gravity="right"
+        android:gravity="bottom"
+        android:layout_marginTop="250dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,130 +30,144 @@
         android:columnCount="4"
         android:rowCount="5">
 
-
-
-
         <Button
-            android:id="@+id/button19"
+            android:id="@+id/lyjBtn7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:text="7" />
+            android:text="7"
+            android:textSize="30dp"/>
 
         <Button
-            android:id="@+id/button20"
+            android:id="@+id/lyjBtn8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:text="8" />
+            android:text="8"
+            android:textSize="30dp"/>
         <Button
-            android:id="@+id/button21"
+            android:id="@+id/lyjBtn9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:text="9" />
+            android:text="9"
+            android:textSize="30dp"/>
         <Button
-            android:id="@+id/button22"
+            android:id="@+id/lyjBtnMul"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:text="*" />
+            android:text="*"
+            android:textSize="30dp"/>
         <Button
-            android:id="@+id/button23"
+            android:id="@+id/lyjBtn4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:text="4" />
+            android:text="4"
+            android:textSize="30dp"/>
         <Button
-            android:id="@+id/button24"
+            android:id="@+id/lyjBtn5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:text="5" />
+            android:text="5"
+            android:textSize="30dp"/>
         <Button
-            android:id="@+id/button25"
+            android:id="@+id/lyjBtn6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:text="6" />
+            android:text="6"
+            android:textSize="30dp"/>
         <Button
-            android:id="@+id/button26"
+            android:id="@+id/lyjBtnMinus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:text="-" />
+            android:text="-"
+            android:textSize="30dp"/>
         <Button
-            android:id="@+id/button26"
+            android:id="@+id/lyjBtn1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:text="1" />
+            android:text="1"
+            android:textSize="30dp"/>
         <Button
-            android:id="@+id/button26"
+            android:id="@+id/lyjBtn2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:text="2" />
+            android:text="2"
+            android:textSize="30dp"/>
         <Button
-            android:id="@+id/button26"
+            android:id="@+id/lyjBtn3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:text="3" />
+            android:text="3"
+            android:textSize="30dp"/>
         <Button
-            android:id="@+id/button26"
+            android:id="@+id/lyjBtnPlus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:text="+" />
+            android:text="+"
+            android:textSize="30dp"/>
         <Button
-            android:id="@+id/button26"
+            android:id="@+id/lyjBtn0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:text="0" />
+            android:text="0"
+            android:textSize="30dp"/>
         <Button
-            android:id="@+id/button26"
+            android:id="@+id/lyjBtnPoint"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:text="." />
+            android:text="."
+            android:textSize="30dp"/>
         <Button
-            android:id="@+id/button26"
+            android:id="@+id/lyjBtnDiv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:text="/" />
+            android:text="/"
+            android:textSize="30dp"/>
         <Button
-            android:id="@+id/button26"
+            android:id="@+id/lyjBtnResult"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:text="=" />
+            android:text="="
+            android:textSize="30dp"/>
         <Button
-            android:id="@+id/button26"
+            android:id="@+id/lyjBtnAC"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:layout_columnSpan="4"
-            android:text="AC" />
+            android:text="AC"
+            android:textSize="30dp"/>
     </GridLayout>
 
 
