--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,16 +11,30 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/lyjResult"
-        android:text="0"
-        android:textSize="40dp"
+        android:id="@+id/lyjPreview"
+        android:text=""
+        android:textSize="25dp"
+        android:textColor="#AEACAC"
         android:layout_gravity="right"
         android:gravity="bottom"
-        android:layout_marginTop="250dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/lyjResult"
+        android:text=""
+        android:textSize="40dp"
+        android:layout_gravity="right"
+        android:gravity="bottom"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+<!--    android:layout_marginTop="250dp"-->
+
 
     <GridLayout
         android:layout_width="match_parent"
@@ -31,135 +45,152 @@
         android:rowCount="5">
 
         <Button
+            android:onClick="resultBtnClicked"
             android:id="@+id/lyjBtn7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:text="7"
-            android:textSize="30dp"/>
+            android:textSize="20dp"/>
 
         <Button
+            android:onClick="resultBtnClicked"
             android:id="@+id/lyjBtn8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:text="8"
-            android:textSize="30dp"/>
+            android:textSize="20dp"/>
         <Button
+            android:onClick="resultBtnClicked"
             android:id="@+id/lyjBtn9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:text="9"
-            android:textSize="30dp"/>
+            android:textSize="20dp"/>
         <Button
+            android:onClick="resultBtnClicked"
             android:id="@+id/lyjBtnMul"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:text="*"
-            android:textSize="30dp"/>
+            android:textSize="20dp"/>
         <Button
+            android:onClick="resultBtnClicked"
             android:id="@+id/lyjBtn4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:text="4"
-            android:textSize="30dp"/>
+            android:textSize="20dp"/>
         <Button
+            android:onClick="resultBtnClicked"
             android:id="@+id/lyjBtn5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:text="5"
-            android:textSize="30dp"/>
+            android:textSize="20dp"/>
         <Button
+            android:onClick="resultBtnClicked"
             android:id="@+id/lyjBtn6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:text="6"
-            android:textSize="30dp"/>
+            android:textSize="20dp"/>
         <Button
+            android:onClick="resultBtnClicked"
             android:id="@+id/lyjBtnMinus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:text="-"
-            android:textSize="30dp"/>
+            android:textSize="20dp"/>
         <Button
+            android:onClick="resultBtnClicked"
             android:id="@+id/lyjBtn1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:text="1"
-            android:textSize="30dp"/>
+            android:textSize="20dp"/>
         <Button
+            android:onClick="resultBtnClicked"
             android:id="@+id/lyjBtn2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:text="2"
-            android:textSize="30dp"/>
+            android:textSize="20dp"/>
         <Button
+            android:onClick="resultBtnClicked"
             android:id="@+id/lyjBtn3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:text="3"
-            android:textSize="30dp"/>
+            android:textSize="20dp"/>
         <Button
+            android:onClick="resultBtnClicked"
             android:id="@+id/lyjBtnPlus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:text="+"
-            android:textSize="30dp"/>
+            android:textSize="20dp"/>
         <Button
+            android:onClick="resultBtnClicked"
             android:id="@+id/lyjBtn0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:text="0"
-            android:textSize="30dp"/>
+            android:textSize="20dp"/>
         <Button
+            android:onClick="resultBtnClicked"
             android:id="@+id/lyjBtnPoint"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:text="."
-            android:textSize="30dp"/>
+            android:textSize="20dp"/>
         <Button
+            android:onClick="resultBtnClicked"
             android:id="@+id/lyjBtnDiv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:text="/"
-            android:textSize="30dp"/>
+            android:textSize="20dp"/>
         <Button
+            android:onClick="resultBtnClicked"
             android:id="@+id/lyjBtnResult"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:text="="
-            android:textSize="30dp"/>
+            android:textSize="20dp"/>
         <Button
+            android:onClick="resultBtnClicked"
             android:id="@+id/lyjBtnAC"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -167,7 +198,7 @@
             android:layout_columnWeight="1"
             android:layout_columnSpan="4"
             android:text="AC"
-            android:textSize="30dp"/>
+            android:textSize="20dp"/>
     </GridLayout>
 
 
