--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,196 +54,208 @@
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:backgroundTint="#454747"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"
+            android:insetTop="10dp"
+            android:insetBottom="10dp"
             android:onClick="resultBtnClicked"
             android:text="7"
             android:textSize="20dp" />
 
         <Button
-            android:onClick="resultBtnClicked"
             android:id="@+id/lyjBtn8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:text="8"
-            android:textSize="20dp"
             android:backgroundTint="#454747"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"/>
-        <Button
+            android:insetTop="10dp"
+            android:insetBottom="10dp"
             android:onClick="resultBtnClicked"
+            android:text="8"
+            android:textSize="20dp" />
+
+        <Button
             android:id="@+id/lyjBtn9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:text="9"
-            android:textSize="20dp"
             android:backgroundTint="#454747"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"/>
-        <Button
+            android:insetTop="10dp"
+            android:insetBottom="10dp"
             android:onClick="resultBtnClicked"
+            android:text="9"
+            android:textSize="20dp" />
+
+        <Button
             android:id="@+id/lyjBtnMul"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:text="*"
-            android:textSize="20dp"
             android:backgroundTint="#FF8C00"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"/>
-        <Button
+            android:insetTop="10dp"
+            android:insetBottom="10dp"
             android:onClick="resultBtnClicked"
+            android:text="*"
+            android:textSize="20dp" />
+
+        <Button
             android:id="@+id/lyjBtn4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:text="4"
-            android:textSize="20dp"
             android:backgroundTint="#454747"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"/>
-        <Button
+            android:insetTop="10dp"
+            android:insetBottom="10dp"
             android:onClick="resultBtnClicked"
+            android:text="4"
+            android:textSize="20dp" />
+
+        <Button
             android:id="@+id/lyjBtn5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:text="5"
-            android:textSize="20dp"
             android:backgroundTint="#454747"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"/>
-        <Button
+            android:insetTop="10dp"
+            android:insetBottom="10dp"
             android:onClick="resultBtnClicked"
+            android:text="5"
+            android:textSize="20dp" />
+
+        <Button
             android:id="@+id/lyjBtn6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:text="6"
-            android:textSize="20dp"
             android:backgroundTint="#454747"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"/>
-        <Button
+            android:insetTop="10dp"
+            android:insetBottom="10dp"
             android:onClick="resultBtnClicked"
+            android:text="6"
+            android:textSize="20dp" />
+
+        <Button
             android:id="@+id/lyjBtnMinus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:text="-"
-            android:textSize="20dp"
             android:backgroundTint="#FF8C00"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"/>
-        <Button
+            android:insetTop="10dp"
+            android:insetBottom="10dp"
             android:onClick="resultBtnClicked"
+            android:text="-"
+            android:textSize="20dp" />
+
+        <Button
             android:id="@+id/lyjBtn1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:text="1"
-            android:textSize="20dp"
             android:backgroundTint="#454747"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"/>
-        <Button
+            android:insetTop="10dp"
+            android:insetBottom="10dp"
             android:onClick="resultBtnClicked"
+            android:text="1"
+            android:textSize="20dp" />
+
+        <Button
             android:id="@+id/lyjBtn2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:text="2"
-            android:textSize="20dp"
             android:backgroundTint="#454747"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"/>
-        <Button
+            android:insetLeft="0dp"
+            android:insetTop="10dp"
+            android:insetRight="0dp"
+            android:insetBottom="10dp"
             android:onClick="resultBtnClicked"
+            android:text="2"
+            android:textSize="20dp" />
+
+        <Button
             android:id="@+id/lyjBtn3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:text="3"
-            android:textSize="20dp"
             android:backgroundTint="#454747"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"/>
-        <Button
+            android:insetTop="10dp"
+            android:insetBottom="10dp"
             android:onClick="resultBtnClicked"
+            android:text="3"
+            android:textSize="20dp" />
+
+        <Button
             android:id="@+id/lyjBtnPlus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:text="+"
-            android:textSize="20dp"
             android:backgroundTint="#FF8C00"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"/>
-        <Button
+            android:insetTop="10dp"
+            android:insetBottom="10dp"
             android:onClick="resultBtnClicked"
+            android:text="+"
+            android:textSize="20dp" />
+
+        <Button
             android:id="@+id/lyjBtnAC"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:text="AC"
-            android:textSize="20dp"
             android:backgroundTint="#C50219"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"/>
-        <Button
+            android:insetTop="10dp"
+            android:insetBottom="10dp"
             android:onClick="resultBtnClicked"
+            android:text="AC"
+            android:textSize="20dp" />
+
+        <Button
             android:id="@+id/lyjBtn0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:text="0"
-            android:textSize="20dp"
             android:backgroundTint="#454747"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"/>
-        <Button
+            android:insetTop="10dp"
+            android:insetBottom="10dp"
             android:onClick="resultBtnClicked"
-            android:id="@+id/lyjBtnDiv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:text="/"
-            android:textSize="20dp"
-            android:backgroundTint="#FF8C00"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"/>
+            android:text="0"
+            android:textSize="20dp" />
+
         <Button
-            android:onClick="resultBtnClicked"
             android:id="@+id/lyjBtnResult"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
+            android:backgroundTint="#0461D3"
+            android:insetTop="10dp"
+            android:insetBottom="10dp"
+            android:onClick="resultBtnClicked"
             android:text="="
-            android:textSize="20dp"
+            android:textSize="20dp" />
+
+        <Button
+            android:id="@+id/lyjBtnDiv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
             android:backgroundTint="#FF8C00"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"/>
-
+            android:insetTop="10dp"
+            android:insetBottom="10dp"
+            android:onClick="resultBtnClicked"
+            android:text="/"
+            android:textSize="20dp" />
     </GridLayout>
-
-
-
 
 </LinearLayout>
