--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,9 @@
         android:gravity="bottom"
         android:text=""
         android:textSize="40dp"
+        android:clickable="false"
+        android:focusable="false"
+        android:singleLine="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,7 +48,7 @@
         android:orientation="horizontal"
         android:layout_weight="1"
         android:columnCount="4"
-        android:rowCount="4">
+        android:rowCount="5">
 
         <Button
             android:id="@+id/lyjBtn7"
@@ -56,7 +59,7 @@
             android:backgroundTint="#454747"
             android:insetTop="10dp"
             android:insetBottom="10dp"
-            android:onClick="resultBtnClicked"
+            android:onClick="numBtnClicked"
             android:text="7"
             android:textSize="20dp" />
 
@@ -69,7 +72,7 @@
             android:backgroundTint="#454747"
             android:insetTop="10dp"
             android:insetBottom="10dp"
-            android:onClick="resultBtnClicked"
+            android:onClick="numBtnClicked"
             android:text="8"
             android:textSize="20dp" />
 
@@ -82,7 +85,7 @@
             android:backgroundTint="#454747"
             android:insetTop="10dp"
             android:insetBottom="10dp"
-            android:onClick="resultBtnClicked"
+            android:onClick="numBtnClicked"
             android:text="9"
             android:textSize="20dp" />
 
@@ -95,7 +98,7 @@
             android:backgroundTint="#FF8C00"
             android:insetTop="10dp"
             android:insetBottom="10dp"
-            android:onClick="resultBtnClicked"
+            android:onClick="onOpClicked"
             android:text="*"
             android:textSize="20dp" />
 
@@ -108,7 +111,7 @@
             android:backgroundTint="#454747"
             android:insetTop="10dp"
             android:insetBottom="10dp"
-            android:onClick="resultBtnClicked"
+            android:onClick="numBtnClicked"
             android:text="4"
             android:textSize="20dp" />
 
@@ -121,7 +124,7 @@
             android:backgroundTint="#454747"
             android:insetTop="10dp"
             android:insetBottom="10dp"
-            android:onClick="resultBtnClicked"
+            android:onClick="numBtnClicked"
             android:text="5"
             android:textSize="20dp" />
 
@@ -134,7 +137,7 @@
             android:backgroundTint="#454747"
             android:insetTop="10dp"
             android:insetBottom="10dp"
-            android:onClick="resultBtnClicked"
+            android:onClick="numBtnClicked"
             android:text="6"
             android:textSize="20dp" />
 
@@ -147,7 +150,7 @@
             android:backgroundTint="#FF8C00"
             android:insetTop="10dp"
             android:insetBottom="10dp"
-            android:onClick="resultBtnClicked"
+            android:onClick="onOpClicked"
             android:text="-"
             android:textSize="20dp" />
 
@@ -160,7 +163,7 @@
             android:backgroundTint="#454747"
             android:insetTop="10dp"
             android:insetBottom="10dp"
-            android:onClick="resultBtnClicked"
+            android:onClick="numBtnClicked"
             android:text="1"
             android:textSize="20dp" />
 
@@ -175,7 +178,7 @@
             android:insetTop="10dp"
             android:insetRight="0dp"
             android:insetBottom="10dp"
-            android:onClick="resultBtnClicked"
+            android:onClick="numBtnClicked"
             android:text="2"
             android:textSize="20dp" />
 
@@ -188,7 +191,7 @@
             android:backgroundTint="#454747"
             android:insetTop="10dp"
             android:insetBottom="10dp"
-            android:onClick="resultBtnClicked"
+            android:onClick="numBtnClicked"
             android:text="3"
             android:textSize="20dp" />
 
@@ -201,23 +204,9 @@
             android:backgroundTint="#FF8C00"
             android:insetTop="10dp"
             android:insetBottom="10dp"
-            android:onClick="resultBtnClicked"
+            android:onClick="onOpClicked"
             android:text="+"
             android:textSize="20dp" />
-
-        <Button
-            android:id="@+id/lyjBtnAC"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:backgroundTint="#C50219"
-            android:insetTop="10dp"
-            android:insetBottom="10dp"
-            android:onClick="resultBtnClicked"
-            android:text="AC"
-            android:textSize="20dp" />
-
         <Button
             android:id="@+id/lyjBtn0"
             android:layout_width="wrap_content"
@@ -227,9 +216,24 @@
             android:backgroundTint="#454747"
             android:insetTop="10dp"
             android:insetBottom="10dp"
-            android:onClick="resultBtnClicked"
+            android:onClick="numBtnClicked"
             android:text="0"
             android:textSize="20dp" />
+
+
+        <Button
+            android:id="@+id/lyjBtnPoint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:backgroundTint="#454747"
+            android:insetTop="10dp"
+            android:insetBottom="10dp"
+            android:onClick="numBtnClicked"
+            android:text="."
+            android:textSize="20dp" />
+
 
         <Button
             android:id="@+id/lyjBtnResult"
@@ -240,7 +244,7 @@
             android:backgroundTint="#0461D3"
             android:insetTop="10dp"
             android:insetBottom="10dp"
-            android:onClick="resultBtnClicked"
+            android:onClick="onEqualClicked"
             android:text="="
             android:textSize="20dp" />
 
@@ -253,9 +257,22 @@
             android:backgroundTint="#FF8C00"
             android:insetTop="10dp"
             android:insetBottom="10dp"
-            android:onClick="resultBtnClicked"
+            android:onClick="onOpClicked"
             android:text="/"
             android:textSize="20dp" />
+        <Button
+            android:id="@+id/lyjBtnAC"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:backgroundTint="#C50219"
+            android:insetTop="10dp"
+            android:insetBottom="10dp"
+            android:onClick="onAllClearClicked"
+            android:text="AC"
+            android:textSize="20dp"
+            android:layout_columnSpan="4"/>
     </GridLayout>
 
 </LinearLayout>
